# universal-creator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: prompt-strategist.agent.md  universal-plan.agent.md  validation-reviewer.agent.md
.claude/hooks/: sync_agents.py
.github/agents/: SYNC.md  artifact-router.agent.md  primitive-selector.agent.md  prompt-strategist.agent.md  universal-explore.agent.md  validation-reviewer.agent.md
.github/skills/agent-generator/: SKILL.md
.github/skills/agent-generator/agents/: analyzer.md  comparator.md  fingerprint.md  grader.md
.github/skills/agent-generator/assets/: eval_review.html
.github/skills/agent-generator/eval-viewer/: viewer.html
.github/skills/agent-generator/evals/: feedback.json  grading.json
.github/skills/agent-generator/examples/: code-reviewer.agent.md  data-pipeline-runner.agent.md
.github/skills/agent-generator/scripts/: errors.py  run_eval.py  validate_agent_output.py
.github/skills/agent-generator/templates/: agent-system-prompt.md
.github/skills/hook-generator/: SKILL.md
.github/skills/hook-generator/agents/: analyzer.md
.github/skills/hook-generator/docs/: events.md
.github/skills/hook-generator/eval-viewer/: generate_review.py  viewer.html
.github/skills/hook-generator/evals/: feedback.json
.github/skills/hook-generator/scripts/: generate_hook_stub.py  improve_description.py
.github/skills/hook-generator/templates/: hook-block.json
.github/skills/instruction-generator/: SKILL.md
.github/skills/instruction-generator/agents/: fingerprint.md  grader.md
.github/skills/instruction-generator/evals/: feedback.json  grading.json
.github/skills/instruction-generator/examples/: react-conventions.instructions.md  typescript-rules.instructions.md
.github/skills/instruction-generator/scripts/: generate_instruction_stub.py  quick_validate.py
.github/skills/instruction-generator/templates/: instructions-extended.md
.github/skills/prompt-generator/: SKILL.md
.github/skills/prompt-generator/agents/: comparator.md  fingerprint.md  grader.md
.github/skills/prompt-generator/docs/: techniques.md
.github/skills/prompt-generator/evals/: benchmark.json  evals.json  feedback.json
.github/skills/prompt-generator/scripts/: validate_prompt_output.py
.github/skills/prompt-generator/templates/: prompt-file.md
.github/skills/shared/: SKILL.md  technique-selector.md  techniques.json
.github/skills/shared/agents/: artifact-router.agent.md  prompt-strategist.agent.md
.github/skills/shared/scripts/: run_loop.py
.github/skills/skill-generator/: SKILL.md
.github/skills/skill-generator/agents/: comparator.md  fingerprint.md  grader.md
.github/skills/skill-generator/evals/: evals.json
.github/skills/skill-generator/references/: schemas.md
.github/skills/skill-generator/scripts/: generate_skill_stub.py  package_skill.py
.github/skills/skill-generator/templates/: skill-workflow.md
.github/workflows/: cicd.yml
agents/: _memory-guardrails.md  artifact-router.agent.md  primitive-selector.agent.md  universal-plan.agent.md  validation-reviewer.agent.md
docs/: install.md
evals/: cross-skill-integration.json
scripts/: run_validations.py  sync_agents.py  sync_skills.py
skills/agent-generator/: SKILL.md
skills/agent-generator/agents/: analyzer.md  comparator.md  fingerprint.md  grader.md
skills/agent-generator/eval-viewer/: viewer.html
skills/agent-generator/evals/: benchmark.json  evals.json
skills/agent-generator/examples/: code-reviewer.agent.md  primitive-selector.agent.md
skills/agent-generator/scripts/: generate_agent_stub.py  generate_report.py
skills/hook-generator/: SKILL.md
skills/hook-generator/agents/: analyzer.md  comparator.md  fingerprint.md  grader.md
skills/hook-generator/docs/: security.md
skills/hook-generator/eval-viewer/: viewer.html
skills/hook-generator/evals/: benchmark.json  evals.json  grading.json
skills/hook-generator/examples/: auto-format-typescript.md  block-destructive-commands.md  notify-slack-on-stop.md
skills/hook-generator/scripts/: validate_hook_output.py
skills/instruction-generator/: SKILL.md
skills/instruction-generator/agents/: analyzer.md  comparator.md  fingerprint.md
skills/instruction-generator/evals/: benchmark.json  evals.json
skills/instruction-generator/scripts/: validate_instruction_output.py
skills/instruction-generator/templates/: instructions-concise.md
skills/prompt-generator/: SKILL.md
skills/prompt-generator/agents/: analyzer.md  comparator.md  fingerprint.md  grader.md  technique-detector.md
skills/prompt-generator/assets/: eval_review.html
skills/prompt-generator/docs/: techniques.md
skills/prompt-generator/eval-viewer/: viewer.html
skills/prompt-generator/evals/: grading.json
skills/prompt-generator/examples/: active-prompt.prompt.md  ape.prompt.md  dsp.prompt.md  few-shot-entity-extraction.prompt.md  zero-shot-document-summary.prompt.md  zero-shot.prompt.md
skills/prompt-generator/examples/techniques/: generate-knowledge.prompt.md  prompt-chaining.prompt.md  rag.prompt.md  react.prompt.md  reflexion.prompt.md  tree-of-thoughts.prompt.md
skills/prompt-generator/scripts/: detect_over_prompting.py
skills/prompt-generator/templates/: chain.md  prompt-file.md  react.md
skills/shared/: SKILL.md  techniques.json
skills/skill-generator/: SKILL.md
skills/skill-generator/agents/: analyzer.md  comparator.md
skills/skill-generator/assets/: eval_review.html
skills/skill-generator/eval-viewer/: viewer.html
skills/skill-generator/evals/: evals.json
skills/skill-generator/scripts/: validate_skill_output.py
src/universal_creator/: __init__.py  __main__.py  cli.py  generate.py  install.py  install_helpers.py  manifest.py  menu.py  models.py  resources.py  sync.py
src/universal_creator/_templates/artifacts/: agent.md.j2  browser-hook.js.j2  hook.sh.j2  instructions.md.j2  prompt.md.j2
tests/: test_install.py  test_resources.py  test_shared_manifest.py  test_sync.py
(+5 files in other folders)
