[project]
name = "universal-creator"
version = "0.1.6"
description = "Skill scaffolding and artifact generation toolkit for VS Code Copilot / Claude agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anselm Hahn", email = "Anselm.Hahn@gmail.com" }]
keywords = [
    "claude",
    "copilot",
    "skills",
    "agents",
    "hooks",
    "prompts",
    "ai",
    "scaffolding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Anselmoo/universal-creator"
Repository = "https://github.com/Anselmoo/universal-creator"
Changelog = "https://github.com/Anselmoo/universal-creator/blob/main/CHANGELOG.md"
Issues = "https://github.com/Anselmoo/universal-creator/issues"

[project.scripts]
universal-creator = "universal_creator.cli:main"

[dependency-groups]
dev = ["poethepoet>=0.33", "ruff>=0.15", "pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
data = ["skills", "agents"]

# ── poethepoet tasks ─────────────────────────────────────────────────────────

[tool.poe.tasks]

[tool.poe.tasks.validate]
help = "Validate all skill SKILL.md frontmatter and script parity"
cmd = "python scripts/run_validations.py"

[tool.poe.tasks.lint]
help = "Lint skills/, scripts/, and src/ with ruff"
cmd = "ruff check skills/ scripts/ src/"

[tool.poe.tasks.fmt]
help = "Format skills/, scripts/, and src/ with ruff"
cmd = "ruff format skills/ scripts/ src/"

[tool.poe.tasks.check]
help = "Run lint then validate-all (pre-push gate)"
sequence = ["lint", "validate-all", "release-policy"]

[tool.poe.tasks.release-policy]
help = "Validate release config, version targets, and runtime minimum-version policy"
cmd = "uvx --from 'repo-release-tools>=1.1.0' rrt doctor"

[tool.poe.tasks.validate-hook]
help = "Validate hook-generator output files in a path (pass -- <path> to override CWD)"
cmd = "python skills/hook-generator/scripts/validate_hook_output.py"

[tool.poe.tasks.validate-instructions]
help = "Validate instruction output files in a path (pass -- <path> to override CWD)"
cmd = "python skills/instruction-generator/scripts/validate_instruction_output.py"

[tool.poe.tasks.validate-prompts]
help = "Validate prompt output files in a path (pass -- <path> to override CWD)"
cmd = "python skills/prompt-generator/scripts/validate_prompt_output.py"

[tool.poe.tasks.validate-agents]
help = "Validate agent-generator output files in a path (pass -- <path> to override CWD)"
cmd = "python skills/agent-generator/scripts/validate_agent_output.py"

[tool.poe.tasks.validate-selector]
help = "Validate the bundled primitive-selector agent (hook / instruction / prompt / agent / skill router)"
cmd = "python skills/agent-generator/scripts/validate_agent_output.py agents/primitive-selector.agent.md"

[tool.poe.tasks.validate-all]
help = "Run all validations: skill frontmatter + per-skill domain validators + bundled agents"
sequence = ["validate", "validate-agents", "validate-selector"]

[tool.poe.tasks.sync]
help = "Sync canonical scripts from agent-generator to all other skills (--overwrite to force)"
cmd = "python -m universal_creator sync"

[tool.poe.tasks.new-skill]
help = "Scaffold a new skill (--name NAME --mode empty|boilerplate [--overwrite])"
cmd = "python -m universal_creator new-skill"

[tool.poe.tasks.package]
help = "Package a skill directory into a distributable zip (--skill NAME)"
cmd = "python -m universal_creator package"

[tool.poe.tasks.eval]
help = "Run evals for a skill (--skill NAME)"
cmd = "python -m universal_creator eval"

[tool.poe.tasks.install-skill]
help = "Install a bundled skill to Claude/Copilot/Gemini/Codex (--skill NAME --host claude|copilot|gemini|codex --scope local|global)"
cmd = "python -m universal_creator install"

[tool.poe.tasks.install-agent]
help = "Install a bundled agent to Claude/Copilot/Gemini/Codex (--agent NAME --host claude|copilot|gemini|codex --scope local|global)"
cmd = "python -m universal_creator install-agent"

[tool.poe.tasks.test]
help = "Run test suite with pytest"
cmd = "pytest"

[tool.poe.tasks.test-cov]
help = "Run pytest with coverage report"
cmd = "pytest --cov=src/universal_creator --cov-report=term-missing"

[tool.poe.tasks.menu]
help = "Interactive skill menu (install or scaffold)"
cmd = "python -m universal_creator menu"

[tool.rrt]

[[tool.rrt.version_targets]]
path = "pyproject.toml"
kind = "pep621"

[[tool.rrt.version_targets]]
path = "src/universal_creator/__init__.py"
kind = "python_version"

[[tool.rrt.pin_targets]]
path = "README.md"
pattern = '(uvx universal-creator==)(\d+\.\d+\.\d+)( --help)'

[[tool.rrt.pin_targets]]
path = "src/universal_creator/_templates/skill/SKILL.md.j2"
pattern = '(version:\s*")(\d+\.\d+\.\d+)(")'

[[tool.rrt.pin_targets]]
path = "src/universal_creator/_templates/skill/evals/evals.json.j2"
pattern = '("version":\s*")(\d+\.\d+\.\d+)(")'

[tool.rrt.eol]
languages = ["python"]
warn_days = 180
error_days = 0

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# ── ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
extend-ignore = ["E501"]

[tool.ruff.format]
# Black-compatible defaults
docstring-code-format = true
